--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,6 @@
 theme: midnight
-title: Dillon Miller
-description: Personal Portfolio Website
+title: Your Name
+header_pages:
+  - projects.md
+  - future-work.md
+  - contact.md
