--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,8 @@
-theme: merlot
+remote_theme: pages-themes/merlot@v0.2.0
+plugins:
+  - jekyll-remote-theme
 title: Your Name
+description: My GitHub Pages Portfolio
 header_pages:
   - projects.md
   - future-work.md
