--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 remote_theme: pages-themes/merlot@v0.2.0
 plugins:
   - jekyll-remote-theme
-title: Your Name
+title: Dillon Miller
 description: My GitHub Pages Portfolio
 header_pages:
   - projects.md
